Lucio - ajustes para documentación de API REST - WS
